[package]
name = "r-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
bytes = "1.8.0"
dashmap = "6.1.0"
enum_dispatch = "0.3.13"
features = { version = "0.10.0", default-features = false }
futures = { version = "0.3.31", default-features = false }
lazy_static = "1.5.0"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros", "net"] }
tokio-stream = { version = "0.1.16", default-features = false }
tokio-util = { version = "0.7.12", features = ["codec"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
